2006-03-13  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_video.c: (RADEONSetTransform):
	Fix typo in the function setting the color space transformation
	factors for old radeon

2006-03-13  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONPreInitVRAM),
	(RADEONPreInitChipType), (RADEONPreInit):
	Earliest fix introduced a bug due to another chicken & egg problem in
	card detection. Now split PreInitConfig into PreInitChipType and
	PreInitVRAM so that PreInitDRI can be done just in between. Restores
	proper AGPx4 functionality (when enabled)

2006-03-12  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/ati.h:
	* src/r128_dri.c:
	* src/r128_driver.c:
	* src/r128_probe.c:
	* src/radeon_driver.c:
	* src/radeon_mm_i2c.c:
	* src/radeon_probe.c:
	* src/radeon_video.c:
	* src/radeon_vip.c:
	* src/atipciids.h:
	Stop using xf86PciInfo.h, instead use a local copy of the PCI IDs
	we need in atipciids.h so we can update the ATI driver independently
	of the server when new chips are added

2006-03-10  Alan Coopersmith  <alan.coopersmith@sun.com>

	* src/radeon_driver.c: 
	Add #ifdef XF86DRI guards around references to info->allowPageFlip
	and info->depthMoves, since they are only defined if building with
	DRI.

2006-03-10  Roland Scheidegger  <rscheidegger_lists@hispeed.ch>
	* man/radeon.man:
	* src/radeon_driver.c: (RADEONSetupMemXAA_DRI), (RADEONScreenInit):
	Use "FBTexPercent" option for XAA too (only for increasing
	memory reserved for textures).

2006-03-10  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon.h:
	* src/radeon_dri.c: (RADEONDRIGartHeapInit), (RADEONDRIGetVersion),
	(RADEONDRIScreenInit), (RADEONDRIInitPageFlip), (RADEONDRIResume),
	(RADEONDRIAllocatePCIGARTTable):
	* src/radeon_driver.c: (RADEONInitMemoryMap),
	(RADEONGetAccessibleVRAM), (RADEONPreInitConfig),
	(RADEONPreInitDRI), (RADEONPreInitColorTiling), (RADEONPreInit),
	(RADEONScreenInit), (RADEONRestoreMode):